--- a/examples/inviscid_wedge.ipynb
+++ b/examples/inviscid_wedge.ipynb
@@ -32,30 +32,36 @@
       "Info    : Meshing 1D...\n",
       "Info    : [  0%] Meshing curve 1 (Line)\n",
       "Info    : [ 20%] Meshing curve 2 (Line)\n",
-      "Info    : [ 40%] Meshing curve 3 (Line)\n",
-      "Info    : [ 60%] Meshing curve 4 (Line)\n",
-      "Info    : [ 80%] Meshing curve 5 (Line)\n",
-      "Info    : Done meshing 1D (Wall 0.000630829s, CPU 0.001108s)\n",
+      "Info    : [ 30%] Meshing curve 3 (Line)\n",
+      "Info    : [ 40%] Meshing curve 4 (Line)\n",
+      "Info    : [ 50%] Meshing curve 5 (Line)\n",
+      "Info    : [ 70%] Meshing curve 6 (Line)\n",
+      "Info    : [ 80%] Meshing curve 7 (Line)\n",
+      "Info    : [ 90%] Meshing curve 8 (Line)\n",
+      "Info    : Done meshing 1D (Wall 0.000486733s, CPU 0.000888s)\n",
       "Info    : Meshing 2D...\n",
-      "Info    : Meshing surface 1 (Transfinite)\n",
-      "Info    : Done meshing 2D (Wall 0.00817088s, CPU 0.003326s)\n",
+      "Info    : Meshing surface 1 (Plane, Frontal-Delaunay)\n",
+      "Info    : Done meshing 2D (Wall 0.0223418s, CPU 0.020909s)\n",
       "Info    : Meshing 3D...\n",
-      "Info    : Done meshing 3D (Wall 2.4035e-05s, CPU 1.8e-05s)\n",
-      "Info    : 30351 nodes 60705 elements\n"
+      "Info    : Done meshing 3D (Wall 2.7508e-05s, CPU 3e-05s)\n",
+      "Info    : 730 nodes 1466 elements\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/vscode/.local/lib/python3.10/site-packages/pythreejs/traits.py:257: UserWarning: 64-bit data types not supported for WebGL data, casting to 32-bit.\n",
+      "Warning : Start point 2 and end point 2 of GEO line 2 are closer than the geometrical tolerance, at position (1.5, 1, 0)\n",
+      "Warning : Start point 3 and end point 3 of GEO line 4 are closer than the geometrical tolerance, at position (1.5, 0.2, 0)\n",
+      "Warning : Start point 5 and end point 5 of GEO line 7 are closer than the geometrical tolerance, at position (0, 0, 0)\n",
+      "/usr/local/lib/python3.10/site-packages/pythreejs/traits.py:257: UserWarning: 64-bit data types not supported for WebGL data, casting to 32-bit.\n",
       "  warnings.warn('64-bit data types not supported for WebGL '\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fbb02b1baeac44c19a156f8eb65d1abd",
+       "model_id": "70ce67cf3f5349b6bc30c47c4e081a30",
        "version_major": 2,
        "version_minor": 0
       },
@@ -69,7 +75,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "09bdce41925d47d38a218a5a8071acba",
+       "model_id": "a4f2a024d5b64132bf5a9a31628afd08",
        "version_major": 2,
        "version_minor": 0
       },
@@ -83,7 +89,7 @@
     {
      "data": {
       "text/html": [
-       "<div style=\"float: left; padding-right: 50px\"><h2>Markers</h2><table><tr><td style=\"background-color: rgb(248,27,27)\" width=\"20\"></td><td>upper</td></tr><tr><td style=\"background-color: rgb(146,247,46)\" width=\"20\"></td><td>inlet</td></tr><tr><td style=\"background-color: rgb(43,253,253)\" width=\"20\"></td><td>lower</td></tr><tr><td style=\"background-color: rgb(149,50,248)\" width=\"20\"></td><td>outlet</td></tr></table></div><div style=\"float: left; padding-right: 50px\"><h2>Zones</h2><table><tr><td style=\"background-color: rgb(127,127,127)\" width=\"20\"></td><td>Zone 0</td></tr></table></div>"
+       "<div style=\"float: left; padding-right: 50px\"><h2>Markers</h2><table><tr><td style=\"background-color: rgb(252,44,44)\" width=\"20\"></td><td>outlet</td></tr><tr><td style=\"background-color: rgb(150,252,48)\" width=\"20\"></td><td>upper</td></tr><tr><td style=\"background-color: rgb(42,251,251)\" width=\"20\"></td><td>lower</td></tr><tr><td style=\"background-color: rgb(148,42,253)\" width=\"20\"></td><td>inlet</td></tr></table></div><div style=\"float: left; padding-right: 50px\"><h2>Zones</h2><table><tr><td style=\"background-color: rgb(127,127,127)\" width=\"20\"></td><td>Zone 0</td></tr></table></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -97,7 +103,7 @@
      "output_type": "stream",
      "text": [
       "Info    : Writing 'mesh_wedge_inv.su2'...\n",
-      "Info    : Writing 60000 elements and 30351 nodes\n",
+      "Info    : Writing 1361 elements and 730 nodes\n",
       "Info    : Done writing 'mesh_wedge_inv.su2'\n"
      ]
     }
@@ -109,22 +115,22 @@
     "with Geometry() as geo:\n",
     "    wedge_coords = np.array([[0, 1], [1.5, 1], [1.5, 0.2], [0.5, 0], [0, 0]])\n",
     "    wedge_curve_loop = CurveLoop(\n",
-    "        wedge_coords, \n",
+    "        groups={\n",
+    "            \"upper\": [(0, 1), (1.5, 1)],\n",
+    "            \"outlet\": [(1.5, 1), (1.5, 0.2)],\n",
+    "            \"lower\": [(1.5, 0.2), (0.5, 0), (0, 0)],\n",
+    "            \"inlet\": [(0, 0), (0, 1)],\n",
+    "        }, \n",
     "        mesh_size=0.05,\n",
-    "        labels={\n",
-    "            \"upper\":  [0],\n",
-    "            \"lower\":  [2,3],\n",
-    "            \"inlet\":  [4],\n",
-    "            \"outlet\": [1],\n",
-    "        },\n",
-    "        transfinite_cell_counts={\n",
-    "            150: [0],\n",
-    "            200: [1,4],\n",
-    "            100: [2],\n",
-    "            50:  [3]\n",
-    "        }\n",
+    "        # transfinite_cell_counts={\n",
+    "        #     150: [0],\n",
+    "        #     200: [1,4],\n",
+    "        #     100: [2],\n",
+    "        #     50:  [3]\n",
+    "        # }\n",
     "    )\n",
-    "    surface = PlaneSurface(wedge_curve_loop, is_quad_mesh=True, transfinite_corners=[0,1,2,4])\n",
+    "    # transfinite_corners=[0,1,2,4]\n",
+    "    surface = PlaneSurface(wedge_curve_loop, is_quad_mesh=True)\n",
     "    mesh = geo.generate(surface)\n",
     "    visualize_mesh(mesh)\n",
     "    geo.write(\"mesh_wedge_inv.su2\")\n",
@@ -141,13 +147,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fd173fa69d9b4755926b6148f4125a24",
+       "model_id": "dbb3c70d07e0494f876f0fb6f0d208ba",
        "version_major": 2,
        "version_minor": 0
       },
@@ -161,7 +167,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4d0d16e4b3a24817b90d4f296f2196ef",
+       "model_id": "050f6199cdb8466c94c7e8a2ea6cd5eb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -175,7 +181,7 @@
     {
      "data": {
       "text/html": [
-       "<div style=\"float: left; padding-right: 50px\"><h2>Markers</h2><table><tr><td style=\"background-color: rgb(250,12,12)\" width=\"20\"></td><td> upper</td></tr><tr><td style=\"background-color: rgb(131,249,13)\" width=\"20\"></td><td> inlet</td></tr><tr><td style=\"background-color: rgb(53,248,248)\" width=\"20\"></td><td> lower</td></tr><tr><td style=\"background-color: rgb(138,26,250)\" width=\"20\"></td><td> outlet</td></tr></table></div><div style=\"float: left; padding-right: 50px\"><h2>Zones</h2><table><tr><td style=\"background-color: rgb(127,127,127)\" width=\"20\"></td><td>Zone 0</td></tr></table></div>"
+       "<div style=\"float: left; padding-right: 50px\"><h2>Markers</h2><table><tr><td style=\"background-color: rgb(248,30,30)\" width=\"20\"></td><td> upper</td></tr><tr><td style=\"background-color: rgb(148,247,49)\" width=\"20\"></td><td> inlet</td></tr><tr><td style=\"background-color: rgb(36,253,253)\" width=\"20\"></td><td> lower</td></tr><tr><td style=\"background-color: rgb(144,41,247)\" width=\"20\"></td><td> outlet</td></tr></table></div><div style=\"float: left; padding-right: 50px\"><h2>Zones</h2><table><tr><td style=\"background-color: rgb(127,127,127)\" width=\"20\"></td><td>Zone 0</td></tr></table></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -202,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.10"
   },
   "orig_nbformat": 4,
   "vscode": {
